--- a/index.html
+++ b/index.html
@@ -8,221 +8,183 @@
 </head>
 
 <body>
-  <header>
-    <nav class="main-navigation" aria-label="Навигация на странице">
-      <a href="#" class="main-header-logo" aria-label="Логотип студии Нёрдс">
-        <svg width="160" height="65">
-          <path d="M158 49l-4 1c-2 17-26 20-27 6 0-6 12-8 24-9 0-11-16 6-22-4-5-9 15-18 17-16 6 5 3 6-1 8-10 3-6 4-5 4 8-3 14-1 14 8h4c2 0 3 2 0 2zm-8 1c-9 1-17 3-16 5 2 6 14 7 16-5zm-32-5V33c1-7 12-3 9-2-3 2-5 9-6 12-1 2-3 2-3 2zM42 21c2 5-5 8-8 5-2-2-1-5 2-7 2-1 5-1 6 2zm15-2c3 5-5 9-9 5-1-2-1-5 3-7 2-1 4-2 6 2zM29 62c-8 5-14 4-12-11 1-11-1-12-3-10-3 3-5 10-5 17a51 51 0 0 0 1 5c0 1-5 3-8 1-1-1-2-9-2-20 0-9 1-15 2-15 8-2 10 1 8 8a48 48 0 0 0-2 8c2-5 4-9 7-10 8-5 14-3 13 6-2 17-3 19-1 18 2-2 4 1 2 3zm26-2c-2 3-8 5-13 4-8-1-13-8-11-18 2-11 18-18 23-10 4 5-2 16-11 19l-1 1c2 5 7 7 11 2 2-2 4-1 2 2zm-14-8c6-4 8-13 7-16-2-2-6 2-7 12v4zm42-7l-6 5c-2 1-5 0-5-3 0-1 1-3 4-4-1-2-2-3-3-2-3 3-7 12-6 19v1l1 2c0 1-5 3-8 0-1 0-2-6-2-17 0-9 2-17 3-17 6-2 10 1 8 7l-3 11c3-7 7-13 10-15 6-3 10 1 9 8l-1 2-1 3z" />
-          <path d="M113 26a87 87 0 0 0-1 8c-1 10-1 19 1 23 0 2 3 5 6 2 3-4 6-2 2 2-2 2-7 4-11 4-3-1-5-3-6-6l-2 2c-2 3-4 4-8 3-6 0-10-7-8-18s11-14 16-12l1-4v-1a97 97 0 0 1-5 1c-24 4-16-15-10-20 7-6 7-2 5-1-3 3-5 16 5 16h5c4-19 14-27 22-24 9 3 8 17-12 25zm-11 25V39v-2c-3-1-6 4-7 11-1 9 2 13 5 11l2-8zm24-44c-1-2-8 1-12 15 10-5 14-13 12-15z" /></svg>
-      </a>
-      <ul class="site-navigation">
+  <header class="header">
+    <nav class="main-navigation centr" aria-label="Навигация на странице">
+      <!-- Лого -->
+      <a class="logo"><svg width="160" height="65">
+        <path d="M158 49l-4 1c-2 17-26 20-27 6 0-6 12-8 24-9 0-11-16 6-22-4-5-9 15-18 17-16 6 5 3 6-1 8-10 
+        3-6 4-5 4 8-3 14-1 14 8h4c2 0 3 2 0 2zm-8 1c-9 1-17 3-16 5 2 6 14 7 16-5zm-32-5V33c1-7 12-3 9-2-3 
+        2-5 9-6 12-1 2-3 2-3 2zM42 21c2 5-5 8-8 5-2-2-1-5 2-7 2-1 5-1 6 2zm15-2c3 5-5 9-9 5-1-2-1-5 3-7 
+        2-1 4-2 6 2zM29 62c-8 5-14 4-12-11 1-11-1-12-3-10-3 3-5 10-5 17a51 51 0 0 0 1 5c0 1-5 
+        3-8 1-1-1-2-9-2-20 0-9 1-15 2-15 8-2 10 1 8 8a48 48 0 0 0-2 8c2-5 4-9 7-10 8-5 14-3 13 6-2 17-3 19-1
+         18 2-2 4 1 2 3zm26-2c-2 3-8 5-13 4-8-1-13-8-11-18 2-11 18-18 23-10 4 5-2 16-11 19l-1 1c2 5 7 7 11 2 
+         2-2 4-1 2 2zm-14-8c6-4 8-13 7-16-2-2-6 2-7 12v4zm42-7l-6 5c-2 1-5 0-5-3 0-1 1-3 4-4-1-2-2-3-3-2-3
+          3-7 12-6 19v1l1 2c0 1-5 3-8 0-1 0-2-6-2-17 0-9 2-17 3-17 6-2 10 1 8 7l-3 11c3-7 7-13 10-15 6-3 10
+           1 9 8l-1 2-1 3z" />
+        <path d="M113 26a87 87 0 0 0-1 8c-1 10-1 19 1 23 0 2 3 5 6 2 3-4 6-2 2 2-2 2-7 4-11 4-3-1-5-3-6-6l-2
+         2c-2 3-4 4-8 3-6 0-10-7-8-18s11-14 16-12l1-4v-1a97 97 0 0 1-5 1c-24 4-16-15-10-20 7-6 7-2 5-1-3 3-5 
+         16 5 16h5c4-19 14-27 22-24 9 3 8 17-12 25zm-11 25V39v-2c-3-1-6 4-7 11-1 9 2 13 5 11l2-8zm24-44c-1-2-8 
+         1-12 15 10-5 14-13 12-15z" /></svg></a>
+    <!-- Меню Сайта-->
+      <ul class="site-navigation reset-ul">
         <li><a href="#" aria-label="Перейти в раздел: Студия">Студия</a></li>
         <li><a href="#" aria-label="Перейти в раздел: Клиенты">Клиенты</a></li>
-        <li><a href="catalog.html" aria-label="Перейти в раздел: Магазин">Магазин</a></li>
+        <li><a href="#" aria-label="Перейти в раздел: Магазин">Магазин</a></li>
         <li><a href="#" aria-label="Перейти в раздел: Контакты">Контакты</a></li>
       </ul>
-      <ul class="user-navigation">
-        <li><a href="#" class="login-link" aria-label="Корзина">Корзина</a></li>
-
-        <svg width="15" height="15">
-          <circle fill="#a6a6a6" cx="5" cy="14" r="2" />
-          <circle fill="#a6a6a6" cx="13" cy="14" r="2" />
-          <path fill="#a6a6a6" d="M15 2H4V0H0v2h2l2 9h11V9H9l6-2z" /></svg>
+      <!-- Меню Пользователя-->
+      <ul class="user-navigation reset-ul">
+        <li class="basket">
+          <a href="#" aria-label="Корзина">
+            <svg class="svg" width="15" height="15">
+              <circle fill="#a6a6a6" cx="5" cy="14" r="2" />
+              <circle fill="#a6a6a6" cx="13" cy="14" r="2" />
+              <path fill="#a6a6a6" d="M15 2H4V0H0v2h2l2 9h11V9H9l6-2z" /></svg> 
+              Корзина          
+		  </a>
+        </li>
       </ul>
     </nav>
 
-    <h1 class="visuality-hidden">Дизайн студия «Нёрдс»</h1>
+    <h1 class="visually-hidden">Дизайн студия «Нёрдс»</h1>
 
-    <section class="main-slider">
-      <div class="slide-one">
-        <p class="main-tagline">
-          Долго, дорого, скурпулезно.
-        </p>
-        <p class="main-tagline-description">
-          Работать днем, как все? Мы против этого.
-          Ближе к полуночи работа только начинается.
-        </p>
 
-        <a href="#" class="button button-red" aria-label="Узнать больше о товаре">Узнать больше</a>
-        <div class="slide-image-container">
-          <!--Для изображения(img)-->
-          <img src="img/nerds-index-slide1.png" alt="Долго, дорого, скурпулезно" width="698" height="413">
-        </div>
-      </div>
-
-      <div class="slide-two">
-        <p class="main-tagline">
-          Любим математику как никто другой
-        </p>
-        <p class="main-tagline-description">
-          Никакого креатива, только математические формулы
-          для расчета идеальных пропорций.
-        </p>
-
-        <a href="#" class="button button-red" aria-label="Узнать больше о товаре">Узнать больше</a>
-        <div class="slide-image-container">
-          <!--Для изображения(img)-->
-          <img src="img/nerds-index-slide2.png" alt="Любим математику как никто другой" width="663" height="430">
-        </div>
-      </div>
-
-      <div class="slide-three">
-        <p class="main-tagline">
-          Только ночь, только хардкор
-        </p>
-        <p class="main-tagline-description">
-          Работать днем, как все? Мы против этого.
-          Ближе к полуночи работа только начинается.
-        </p>
-
-        <a href="#" class="button button-red" aria-label="Узнать больше о товаре">Узнать больше</a>
-        <div class="slide-image-container">
-          <img src="img/nerds-index-slide3.png" alt="Только ночь, только хардкор" width="759" height="411">
-          <!--Для изображения(img)-->
-        </div>
-      </div>
+  <section class="hero">
+      <ul class="hero-list slider centr reset-ul">
+        <li>
+          <div>
+            <h2 class="r-h">Долго, дорого, <br> скрупулезно.</h2>
+            <p class="r-p">Математически выверенный дизайн <br> для вашего сайта или мобильного приложения.</p>
+            <a href="#" class="btn">УЗНАТЬ БОЛЬШЕ</a>
+          </div>
+        </li>
+        <li>
+          <div>
+            <h2 class="r-h">Любим математику <br> как никто другой</h2>
+            <p class="r-p">Никакого креатива, только математические формулы <br>
+              для расчета идеальных пропорций.</p>
+            <a href="#" class="btn">УЗНАТЬ БОЛЬШЕ</a>
+            </div>
+        </li>
+        <li>
+          <div>
+            <h2 class="r-h">Только ночь,<br> только хардкор</h2>
+            <p class="r-p">Работать днем, как все? Мы против этого. <br> Ближе к полуночи работа только начинается.</p>
+            <a href="#" class="btn">УЗНАТЬ БОЛЬШЕ</a>
+          </article>
+        </li>
+      </ul>
     </section>
 
   </header>
-  <main class="container">
-    <section class="main-services">
-      <h2 class="visuality-hidden">Услуги компании</h2>
-      <ul class="services-list">
-        <li class="services-item">
-          <div class="services-item-picture">
-            <img src="img/illustration-1.jpg" alt="Веб-сайты" width="300" height="146">
-          </div>
-          <h3>Веб-сайты</h3>
-          <p class="services-item-description">
-            Мир никогда не будет прежним после того как увидит ваш сайт!
-          </p>
-          <a href="#" class="button red-button services-button" aria-label="Заказать Веб-сайт">Заказать</a>
+  <main>
+    <section class="main-services centr">
+      <h2 class="visually-hidden">Услуги компании</h2>
+      <ul class="services-list reset-ul">
 
+        <li class="services-item">
+          <img src="img/illustration-1.jpg" alt="">
+				  <h3 class="r-h">Веб-сайты</h3>
+				  <p class="r-p">Мир никогда не будет прежним <br> после того как увидит ваш сайт!</p>
+				  <a href="#" class="btn btn-red">ЗАКАЗАТЬ</a>
         </li>
-        <li class="services-item">
-          <div class="services-item-picture">
-            <img src="img/illustration-2.jpg" alt="Веб-сайты" width="300" height="146">
-          </div>
-          <h3>Приложения</h3>
-          <p class="services-item-description">
-            Покорите топ-10 приложений в AppStore и Google Play
-          </p>
-          <a href="#" class="button green-button services-button" aria-label="Заказать Приложение">Заказать</a>
 
+        <li class="services-item">
+          <img src="img/illustration-2.jpg" alt="">
+				  <h3 class="r-h">Приложения</h3>
+				  <p class="r-p">Покорите топ-10 приложений в br AppStore и Google Play</p>
+				  <a href="#" class="btn btn-green">ЗАКАЗАТЬ</a>
         </li>
-        <li class="services-item">
-          <div class="services-item-picture">
-            <img src="img/illustration-3.jpg" alt="Веб-сайты" width="300" height="146">
-          </div>
-          <h3>Презентации</h3>
-          <p class="services-item-description">
-            Вы даже не подозреваете, насколько вы изумительны!
-          </p>
-          <a href="#" class="button yellow-button services-button" aria-label="Заказать Презентацию">Заказать</a>
 
+        <li class="services-item">
+          <img src="img/illustration-3.jpg" alt="">
+				  <h3 class="r-h">Презентации</h3>
+				  <p class="r-p">Вы даже не подозреваете, <br>
+					насколько вы изумительны!</p>
+				  <a href="#" class="btn btn-yellow">ЗАКАЗАТЬ</a>
         </li>
       </ul>
     </section>
 
-    <section class="about">
-      <h2 class="visuality-hidden">О компании</h2>
-      <div class="about-column">
-        <b class="about-lead">
+    <!-- О нас -->
+	<section class="about centr">
+      <div class="item">
+        <h2 class="r-h">
           Мы — маленькая, но гордая
           дизайн-студия из Краснодара.
-        </b>
-
-        <p class="about-desc">
+        </h2>
+        <p class="r-p">
           Исповедуем принципы минимализма и чистоты. Ставим математический расчет
           превыше креатива. Работаем не покладая рук, как роботы.
         </p>
-
-        <h3 class="about-lead-header">Выполняем заказы на разработку</h3>
-        <ul class="about-list">
-          <li class="about-order-item">Веб-сайтов любой сложности</li>
-          <li class="about-order-item">Мобильных приложений для iOS и Android</li>
-          <li class="about-order-item">Слайдшоу и видео для корпоративных презентаций</li>
+        <h4 class="r-h">Выполняем заказы на разработку:</h4>
+        <ul class="about-list reset-ul">
+          <li>Веб-сайтов любой сложности</li>
+          <li>Мобильных приложений для iOS и Android</li>
+          <li>Слайдшоу и видео для корпоративных презентаций</li>
         </ul>
       </div>
-
-      <div class="about-column">
-        <div class="about-logo">
-          <img src="img/nerds-illustration.jpg" alt="Маленькая, но гордая
-				дизайн-студия из Краснодара.">
-        </div>
-        <h3 class="about-stats-text">
-          С 2004 года любим точность во всем
-        </h3>
-
-        <ul class="about-stats-list">
-          <li class="about-stats-list-item">
-            <span class="about-stats-list-number">146%</span>
-            <span class="about-stats-list-name">Уровень самоотдачи</span>
+      <div class="item">
+        <img src="img/nerds-illustration.png" alt="">
+        <h4 class="r-h">с 2004 года Любим точность во всем:</h4>
+        <ul class="about-stats reset-ul">
+          <li>
+            <span class="number">146<sup>%</sup></span>
+            <span class="name">Уровень самоотдачи</span>
           </li>
-          <li class="about-stats-list-item">
-            <span class="about-stats-list-number">100%</span>
-            <span class="about-stats-list-name">Соблюдение сроков</span>
+          <li>
+            <span class="number">100<sup>%</sup></span>
+            <span class="name">Соблюдение сроков</span>
           </li>
-          <li class="about-stats-list-item">
-            <span class="about-stats-list-number">50%</span>
-            <span class="about-stats-list-name">Минимальная предоплата</span>
+          <li>
+            <span class="number">50<sup>%</sup></span>
+            <span class="name">Минимальная предоплата</span>
           </li>
         </ul>
-
       </div>
     </section>
+    <!-- Проекты -->
+	  <section class="works centr">
+		  <h2 class="visually-hidden">Наши работы</h2>
+		  <ul class="works-list reset-ul">
+			  <li><a href="#"><img src="img/logo-1.png" alt=""></a></li>
+			  <li><a href="#"><img src="img/logo-2.png" alt=""></a></li>
+			  <li><a href="#"><img src="img/logo-3.png" alt=""></a></li>
+			  <li><a href="#"><img src="img/logo-4.png" alt=""></a></li>
+		  </ul>
+  </section>
+  
+  <!-- Контакты -->
+	<section class="contact">
+		<!-- Обертка -->
+		<div class="centr contact-container">
+			<article class="contact-block">
+				<h3 class="r-h">NЁRDS DESIGN STUDIO</h3>
+				<p class="r-p">
+					191186, Санкт-Петербург,
+					ул. Б. Конюшенная, д. 19/8 
+					<span>тел. <a class="phone" href="tel:+7(812)275-75-75">+7 (812) 275-75-75</a></span>
+				</p>
+				<a href="feed.html" class="btn">Напишите нам</a>
+			</article>
+		</div>
+		<!-- Карта -->
+		<div class="map" id="map">
 
-    <section class="main-clients">
-      <h2 class="visuality-hidden">Наши клиенты</h2>
-      <ul class="clients-list">
-        <li class="clients-item">
-					<a href="https://htmlacademy.ru/intensive/htmlcss">
-						<img src="img/logo-1.png" alt="Html academy" width="199" height="68"  aria-label="Наш клиент: Html академия">
-					</a>
-				</li>
-        <li class="clients-item">
-					<a href="">
-						<img src="img/logo-2.png" alt="Barbershop Borodinski" height="90" width="209" aria-label="Наш клиент: Барбершоп Бородинский">
-					</a>
-				</li>
-        <li class="clients-item">
-					<a href="">
-						<img src="img/logo-3.png" alt="Pink" height="52" width="185" aria-label="Наш клиент: Pink">
-					</a>
-				</li>
-        <li class="clients-item">
-					<a href="">
-						<img src="img/logo-4.png" alt="Mishka" height="84" width="173" aria-label="Наш клиент: Mishka">
-					</a>
-				</li>
-      </ul>
-    </section>
+		</div>
+	</section>
+	
   </main>
 
-  <footer class="main-footer">
-
-    <ul class="footer-social">
-      <li>
-        <a class="social-button" href="#" aria-label="Мы в Вконтакте"><svg width="26" height="15">
-            <path fill="#ffffff" d="M16 12c1-1 2 2 4 2l1 1h4s2 0 1-2l-3-3c-2-2-2-1 1-5l2-4h-6l-2 3-2 3-1-2c0-3 1-5-1-5H9v1l1 1v5C9 8 8 7 7 4L5 1H0v1l6 10c3 3 7 3 7 3h2v-1l1-2z" /></svg>
-        </a>
-      </li>
-      <li>
-        <a class="social-button" href="#" aria-label="Мы в Фейсбуке"><svg width="12" height="22">
-            <path fill="#ffffff" d="M12 4V0H8a4 4 0 0 0-4 4v4H0v4h4v10h4V12h4V8H8V4h4z" /></svg></a></li>
-      <li>
-        <a class="social-button" href="#" aria-label="Мы в Инстаграм"><svg width="21" height="21">
-            <path fill="#ffffff" d="M18 0H3C1 0 0 1 0 3v15c0 2 1 3 3 3h15c2 0 3-1 3-3V3c0-2-1-3-3-3zm-7 7a4 4 0 1 1-1 7 4 4 0 0 1 1-7zm7 11H3V9h1a7 7 0 0 0 0 2 7 7 0 1 0 13 0 6 6 0 0 0 0-2h1v9zm0-11h-4V3h4v4z" /></svg>
-        </a>
-      </li>
-    </ul>
-
-
-    <p class="footer-description">
-      Давайте дружить, это выгодно!
-      <span class="friend-social">Скидка 10% для друзей из социальных сетей.</span>
-    </p>
-  </footer>
+  <!-- Подвал -->
+	<footer class="footer centr">
+		<ul class="social reset-ul">
+			<li><a class="social-icon" href="#"><img src="img/vk-icon.png" alt=""></a></li>
+			<li><a class="social-icon" href="#"><img src="img/fb-icon.png" alt=""></a></li>
+			<li><a class="social-icon" href="#"><img src="img/insta-icon.png" alt=""></a></li>
+		</ul>
+		<p><b>Давайте дружить, это выгодно!</b>Скидка 10% для друзей из социальных сетей.</p>
+	</footer>
 
   <div class="modal">
     <div class="modal-header">
@@ -246,6 +208,9 @@
       <button type="submit" class="btn btn-red" aria-label="Кнопка отправки">Отправить</button>
     </form>
   </div>
+  <!-- Скрипты -->
+	<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
+	<script src="js/script.js"></script>
 </body>
 
 </html>
