--- a/catalog.html
+++ b/catalog.html
@@ -12,7 +12,7 @@
   <header class="header">
     <nav class="main-navigation centr" aria-label="Навигация на странице">
       <!-- Лого -->
-      <a class="logo"><svg width="160" height="65">
+      <a class="logo" href="index.html"><svg width="160" height="65">
           <path d="M158 49l-4 1c-2 17-26 20-27 6 0-6 12-8 24-9 0-11-16 6-22-4-5-9 15-18 17-16 6 5 3 6-1 8-10 3-6 4-5 4 8-3 14-1 14 8h4c2 0 3 2 0 2zm-8 1c-9 1-17 3-16 5 2 6 14 7 16-5zm-32-5V33c1-7 12-3 9-2-3 2-5 9-6 12-1 2-3 2-3 2zM42 21c2 5-5 8-8 5-2-2-1-5 2-7 2-1 5-1 6 2zm15-2c3 5-5 9-9 5-1-2-1-5 3-7 2-1 4-2 6 2zM29 62c-8 5-14 4-12-11 1-11-1-12-3-10-3 3-5 10-5 17a51 51 0 0 0 1 5c0 1-5 3-8 1-1-1-2-9-2-20 0-9 1-15 2-15 8-2 10 1 8 8a48 48 0 0 0-2 8c2-5 4-9 7-10 8-5 14-3 13 6-2 17-3 19-1 18 2-2 4 1 2 3zm26-2c-2 3-8 5-13 4-8-1-13-8-11-18 2-11 18-18 23-10 4 5-2 16-11 19l-1 1c2 5 7 7 11 2 2-2 4-1 2 2zm-14-8c6-4 8-13 7-16-2-2-6 2-7 12v4zm42-7l-6 5c-2 1-5 0-5-3 0-1 1-3 4-4-1-2-2-3-3-2-3 3-7 12-6 19v1l1 2c0 1-5 3-8 0-1 0-2-6-2-17 0-9 2-17 3-17 6-2 10 1 8 7l-3 11c3-7 7-13 10-15 6-3 10 1 9 8l-1 2-1 3z" />
           <path d="M113 26a87 87 0 0 0-1 8c-1 10-1 19 1 23 0 2 3 5 6 2 3-4 6-2 2 2-2 2-7 4-11 4-3-1-5-3-6-6l-2 2c-2 3-4 4-8 3-6 0-10-7-8-18s11-14 16-12l1-4v-1a97 97 0 0 1-5 1c-24 4-16-15-10-20 7-6 7-2 5-1-3 3-5 16 5 16h5c4-19 14-27 22-24 9 3 8 17-12 25zm-11 25V39v-2c-3-1-6 4-7 11-1 9 2 13 5 11l2-8zm24-44c-1-2-8 1-12 15 10-5 14-13 12-15z" /></svg></a>
       <!-- Меню Сайта-->
@@ -35,7 +35,7 @@
         </li>
       </ul>
     </nav>
-    <h1 class="header-head r-h centr">Магазин готовых шаблонов</h1>
+    <h1 class="header-head reset-h centr">Магазин готовых шаблонов</h1>
   </header>
   <main>
     <section class="container-catalog centr">
@@ -229,13 +229,46 @@
 		<!-- Обертка -->
 		<div class="centr contact-container">
 			<article class="contact-block">
-				<h3 class="r-h">NЁRDS DESIGN STUDIO</h3>
-				<p class="r-p">
+				<h3 class="reset-h">NЁRDS DESIGN STUDIO</h3>
+				<p class="reset-p">
 					191186, Санкт-Петербург,
 					ул. Б. Конюшенная, д. 19/8 
 					<span>тел. <a class="phone" href="tel:+7(812)275-75-75">+7 (812) 275-75-75</a></span>
 				</p>
-				<a href="feed.html" class="btn">Напишите нам</a>
+				<a href="#" class="btn call-modal">Написать нам</a>
+	
+	<!-- Обертка -->
+  <div class="overlay">
+		<!-- Модальное окно -->
+    <div class="modal">
+			<!-- Верхняя часть - Шапка -->
+      <div class="modal__header">
+        <h2 class="modal__head">Напишите нам</h2>
+        <button class="modal__exit">&times;</button>
+			</div>
+			<!-- Форма -->
+      <form action="#" class="modal-form">
+				<!-- Поле -->
+        <label class="modal-form__label">
+          Ваше имя:
+          <input type="text" placeholder="Имя Фамилия" class="modal-form__input">
+				</label>
+				<!-- Поле -->
+        <label class="modal-form__label">
+          Ваш e-mail:
+          <input type="email" placeholder="email@example.com" class="modal-form__input">
+				</label>
+				<!-- Поле -->
+        <label class="modal-form__label">
+          Текст письма:
+          <textarea placeholder="В свободной форме" class="modal-form__input modal-form__textarea"></textarea>
+				</label>
+				<!-- Кнопка -->
+        <button type="submit" class="btn modal-form__btn">ОТПРАВИТЬ</button>
+			</form>
+		</div>
+  </div>
+  
 			</article>
 		</div>
 		<!-- Карта -->
@@ -254,64 +287,13 @@
 		</ul>
 		<p><b>Давайте дружить, это выгодно!</b>Скидка 10% для друзей из социальных сетей.</p>
 	</footer>
-  <div class="modal">
-    <div class="modal-header">
-      <h2 class="">Напишите нам</h2>
-    </div>
-    <form action="post" class="modal-form">
-      <div class="modal-form-group">
-        <p class="modal-form-field">
-          <label for="modal-name" class="modal-form-label" aria-label="Имя пользователя">Ваше имя</label>
-          <input type="text" id="modal-name" class="modal-form-input" placeholder="Имя Фамилия">
-        </p>
-        <p class="modal-form-field">
-          <label for="modal-mail" class="modal-form-label" aria-label="Почта пользователя">Ваш e-mail</label>
-          <input type="email" id="modal-mail" class="modal-form-input" placeholder="email@example.com">
-        </p>
-      </div>
-      <p class="modal-form-field modal-form-field-textarea">
-        <label for="message" class="modal-form-label" aria-label="Введите текст письма">Текст письма</label>
-        <textarea id="message" cols="70" rows="6" placeholder="В свободной форме" class="modal-form-input modal-form-input-textarea"></textarea>
-      </p>
-      <button type="submit" class="btn btn-red" aria-label="Кнопка отправки">Отправить</button>
-    </form>
-  </div>
+  
   <!-- Скрипты -->
 	<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
-	<script src="js/script.js"></script>
+  <script src="js/script.js"></script>
+  <script src="js/modal.js"></script>
 </body>
 
 </html>
 
-<!--
-						<label>
-							Адаптивная 
-						</label>
-						<label>
-							Фиксированная <input type="radio" name="question-one" value="fx">
-						</label>
-						<label>
-							Резиновая <input type="radio" name="question-one" value="rb">
-						</label>
 
-
-						<h3 class="grid-lead"></h3>
-						<label>
-							Слайдер <input type="checkbox" name="slider" checked>
-						</label>
-						<label>
-							Блок преимуществ <input type="checkbox" name="advantages">
-						</label>
-						<label>
-							Новости <input type="checkbox" name="news" checked>
-						</label>
-						<label>
-							Галерея <input type="checkbox" name="galery">
-						</label>
-						<label>
-							Корзина <input type="checkbox" name="bin">
-						</label>
-
-						<input type="submit" value="Показать">
-						
-					-->
