--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header class="header">
     <nav class="main-navigation centr" aria-label="Навигация на странице">
       <!-- Лого -->
-      <a class="logo"><svg width="160" height="65">
+      <a class="logo" href="index.html"><svg width="160" height="65">
         <path d="M158 49l-4 1c-2 17-26 20-27 6 0-6 12-8 24-9 0-11-16 6-22-4-5-9 15-18 17-16 6 5 3 6-1 8-10 
         3-6 4-5 4 8-3 14-1 14 8h4c2 0 3 2 0 2zm-8 1c-9 1-17 3-16 5 2 6 14 7 16-5zm-32-5V33c1-7 12-3 9-2-3 
         2-5 9-6 12-1 2-3 2-3 2zM42 21c2 5-5 8-8 5-2-2-1-5 2-7 2-1 5-1 6 2zm15-2c3 5-5 9-9 5-1-2-1-5 3-7 
@@ -29,7 +29,7 @@
       <ul class="site-navigation reset-ul">
         <li><a href="#" aria-label="Перейти в раздел: Студия">Студия</a></li>
         <li><a href="#" aria-label="Перейти в раздел: Клиенты">Клиенты</a></li>
-        <li><a href="#" aria-label="Перейти в раздел: Магазин">Магазин</a></li>
+        <li><a href="../catalog.html" aria-label="Перейти в раздел: Магазин">Магазин</a></li>
         <li><a href="#" aria-label="Перейти в раздел: Контакты">Контакты</a></li>
       </ul>
       <!-- Меню Пользователя-->
@@ -53,23 +53,24 @@
       <ul class="hero-list slider centr reset-ul">
         <li>
           <div>
-            <h2 class="r-h">Долго, дорого, <br> скрупулезно.</h2>
-            <p class="r-p">Математически выверенный дизайн <br> для вашего сайта или мобильного приложения.</p>
+            <h2 class="reset-h">Долго, дорого, <br> скрупулезно.</h2>
+            <p class="reset-p">Математически выверенный дизайн <br> для вашего сайта или мобильного приложения.</p>
             <a href="#" class="btn">УЗНАТЬ БОЛЬШЕ</a>
           </div>
         </li>
         <li>
           <div>
-            <h2 class="r-h">Любим математику <br> как никто другой</h2>
-            <p class="r-p">Никакого креатива, только математические формулы <br>
+            <h2 class="reset-h">Любим математику <br> как никто другой</h2>
+            <p class="reset-p">Никакого креатива, только математические формулы <br>
+              <p class="-p">Никакого креатива, только математические формулы <br>
               для расчета идеальных пропорций.</p>
             <a href="#" class="btn">УЗНАТЬ БОЛЬШЕ</a>
             </div>
         </li>
         <li>
           <div>
-            <h2 class="r-h">Только ночь,<br> только хардкор</h2>
-            <p class="r-p">Работать днем, как все? Мы против этого. <br> Ближе к полуночи работа только начинается.</p>
+            <h2 class="reset-h">Только ночь,<br> только хардкор</h2>
+            <p class="reset-p">Работать днем, как все? Мы против этого. <br> Ближе к полуночи работа только начинается.</p>
             <a href="#" class="btn">УЗНАТЬ БОЛЬШЕ</a>
           </article>
         </li>
@@ -84,22 +85,22 @@
 
         <li class="services-item">
           <img src="img/illustration-1.jpg" alt="">
-				  <h3 class="r-h">Веб-сайты</h3>
-				  <p class="r-p">Мир никогда не будет прежним <br> после того как увидит ваш сайт!</p>
+				  <h3 class="reset-h">Веб-сайты</h3>
+				  <p class="reset-p">Мир никогда не будет прежним <br> после того как увидит ваш сайт!</p>
 				  <a href="#" class="btn btn-red">ЗАКАЗАТЬ</a>
         </li>
 
         <li class="services-item">
           <img src="img/illustration-2.jpg" alt="">
-				  <h3 class="r-h">Приложения</h3>
-				  <p class="r-p">Покорите топ-10 приложений в br AppStore и Google Play</p>
+				  <h3 class="reset-h">Приложения</h3>
+				  <p class="reset-p">Покорите топ-10 приложений в br AppStore и Google Play</p>
 				  <a href="#" class="btn btn-green">ЗАКАЗАТЬ</a>
         </li>
 
         <li class="services-item">
           <img src="img/illustration-3.jpg" alt="">
-				  <h3 class="r-h">Презентации</h3>
-				  <p class="r-p">Вы даже не подозреваете, <br>
+				  <h3 class="reset-h">Презентации</h3>
+				  <p class="reset-p">Вы даже не подозреваете, <br>
 					насколько вы изумительны!</p>
 				  <a href="#" class="btn btn-yellow">ЗАКАЗАТЬ</a>
         </li>
@@ -109,15 +110,15 @@
     <!-- О нас -->
 	<section class="about centr">
       <div class="item">
-        <h2 class="r-h">
+        <h2 class="reset-h">
           Мы — маленькая, но гордая
           дизайн-студия из Краснодара.
         </h2>
-        <p class="r-p">
+        <p class="reset-p">
           Исповедуем принципы минимализма и чистоты. Ставим математический расчет
           превыше креатива. Работаем не покладая рук, как роботы.
         </p>
-        <h4 class="r-h">Выполняем заказы на разработку:</h4>
+        <h4 class="reset-h">Выполняем заказы на разработку:</h4>
         <ul class="about-list reset-ul">
           <li>Веб-сайтов любой сложности</li>
           <li>Мобильных приложений для iOS и Android</li>
@@ -126,7 +127,7 @@
       </div>
       <div class="item">
         <img src="img/nerds-illustration.png" alt="">
-        <h4 class="r-h">с 2004 года Любим точность во всем:</h4>
+        <h4 class="reset-h">с 2004 года Любим точность во всем:</h4>
         <ul class="about-stats reset-ul">
           <li>
             <span class="number">146<sup>%</sup></span>
@@ -159,13 +160,46 @@
 		<!-- Обертка -->
 		<div class="centr contact-container">
 			<article class="contact-block">
-				<h3 class="r-h">NЁRDS DESIGN STUDIO</h3>
-				<p class="r-p">
+				<h3 class="reset-h">NЁRDS DESIGN STUDIO</h3>
+				<p class="reset-p">
 					191186, Санкт-Петербург,
 					ул. Б. Конюшенная, д. 19/8 
 					<span>тел. <a class="phone" href="tel:+7(812)275-75-75">+7 (812) 275-75-75</a></span>
 				</p>
-				<a href="feed.html" class="btn">Напишите нам</a>
+				<!-- Кнопка -->
+	<a href="#" class="btn call-modal">Написать нам</a>
+	
+	<!-- Обертка -->
+  <div class="overlay">
+		<!-- Модальное окно -->
+    <div class="modal">
+			<!-- Верхняя часть - Шапка -->
+      <div class="modal__header">
+        <h2 class="modal__head">Напишите нам</h2>
+        <button class="modal__exit">&times;</button>
+			</div>
+			<!-- Форма -->
+      <form action="#" class="modal-form">
+				<!-- Поле -->
+        <label class="modal-form__label">
+          Ваше имя:
+          <input type="text" placeholder="Имя Фамилия" class="modal-form__input">
+				</label>
+				<!-- Поле -->
+        <label class="modal-form__label">
+          Ваш e-mail:
+          <input type="email" placeholder="email@example.com" class="modal-form__input">
+				</label>
+				<!-- Поле -->
+        <label class="modal-form__label">
+          Текст письма:
+          <textarea placeholder="В свободной форме" class="modal-form__input modal-form__textarea"></textarea>
+				</label>
+				<!-- Кнопка -->
+        <button type="submit" class="btn modal-form__btn">ОТПРАВИТЬ</button>
+			</form>
+		</div>
+	</div>
 			</article>
 		</div>
 		<!-- Карта -->
@@ -185,32 +219,10 @@
 		</ul>
 		<p><b>Давайте дружить, это выгодно!</b>Скидка 10% для друзей из социальных сетей.</p>
 	</footer>
-
-  <div class="modal">
-    <div class="modal-header">
-      <h2 class="">Напишите нам</h2>
-    </div>
-    <form action="post" class="modal-form">
-      <div class="modal-form-group">
-        <p class="modal-form-field">
-          <label for="modal-name" class="modal-form-label" aria-label="Имя пользователя">Ваше имя</label>
-          <input type="text" id="modal-name" class="modal-form-input" placeholder="Имя Фамилия">
-        </p>
-        <p class="modal-form-field">
-          <label for="modal-mail" class="modal-form-label" aria-label="Почта пользователя">Ваш e-mail</label>
-          <input type="email" id="modal-mail" class="modal-form-input" placeholder="email@example.com">
-        </p>
-      </div>
-      <p class="modal-form-field modal-form-field-textarea">
-        <label for="message" class="modal-form-label" aria-label="Введите текст письма">Текст письма</label>
-        <textarea id="message" cols="70" rows="6" placeholder="В свободной форме" class="modal-form-input modal-form-input-textarea"></textarea>
-      </p>
-      <button type="submit" class="btn btn-red" aria-label="Кнопка отправки">Отправить</button>
-    </form>
-  </div>
   <!-- Скрипты -->
 	<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
-	<script src="js/script.js"></script>
+  <script src="js/script.js"></script>
+  <script src="js/modal.js"></script>
 </body>
 
 </html>
