Проставил размеры изображениям

--- a/catalog.html
+++ b/catalog.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="rus">
+<html lang="ru">
 
 <head>
   <meta charset="utf-8">
@@ -42,7 +42,7 @@
       <!-- Левая часть Каталога -->
       <div class="filters">
         <!-- Форма -->
-        <form action="" class="filters-form">
+        <form action="#" class="filters-form">
           <!-- Логическая обертка -->
           <fieldset class="filters-form__price">
             <!-- Заголовок  -->
@@ -149,7 +149,8 @@
         <ul class="projects-list reset-ul">
           <!-- Проект -->
           <li class="project">
-            <img src="img/browser.png" alt="">
+            <img src="img/browser.png" width="360" height="576" alt="Информационный сайт
+            для туристов">
             <img src="img/img-sedona.jpg.png" alt="">
             <div class="project-wrap">
               <h3 class="reset-h">Sedona</h3>
@@ -160,7 +161,8 @@
           </li>
           <!-- Проект -->
           <li class="project">
-            <img src="img/browser.png" alt="">
+            <img src="img/browser.png" width="360" height="576" alt="Продуктовый лендинг
+            приложения для iOS и Android">
             <img src="img/img-pink.jpg.png" alt="">
             <div class="project-wrap">
               <h3 class="reset-h">Pink App</h3>
@@ -172,7 +174,8 @@
           <!-- Проект -->
           <li class="project">
             <img src="img/browser.png" alt="">
-            <img src="img/img-barbershop.jpg.png" alt="Barbershop">
+            <img src="img/img-barbershop.jpg.png" width="360" height="576" alt="Сайт салона красоты.
+            Для мужчин">
             <div class="project-wrap">
               <h3 class="reset-h">Barbershop</h3>
               <p class="reset-p">Сайт салона красоты.
@@ -183,7 +186,8 @@
           <!-- Проект -->
           <li class="project">
             <img src="img/browser.png" alt="">
-            <img src="img/img-mishka.jpg.png" alt="MISHKA">
+            <img src="img/img-mishka.jpg.png" width="360" height="576" alt="Интернет-магазин
+            вязаных игрушек">
             <div class="project-wrap">
               <h3 class="reset-h">MISHKA</h3>
               <p class="reset-p">Интернет-магазин
@@ -194,7 +198,7 @@
           <!-- Проект -->
           <li class="project">
             <img src="img/browser.png" alt="">
-            <img src="img/img-aplus.jpg.png" alt="A Plus">
+            <img src="img/img-aplus.jpg.png" width="360" height="576" alt="Лендинг курсов повышения квалификации">
             <div class="project-wrap">
               <h3 class="reset-h">A Plus</h3>
               <p class="reset-p">Лендинг курсов повышения квалификации</p>
@@ -203,7 +207,8 @@
           </li>
           <!-- Проект -->
           <li class="project">
-            <img src="img/browser.png" alt="">
+            <img src="img/browser.png" width="360" height="576" alt="Промо-сайт производителя
+            крафтового кваса">
             <img src="img/img-kvast.jpg.png" alt="КВАСТ">
             <div class="project-wrap">
               <h3 class="reset-h">КВАСТ</h3>
@@ -226,6 +231,7 @@
     </section>
     <!-- Контакты -->
 	<section class="contact">
+    <h2 class="visually-hidden">Контакты</h2>
 		<!-- Обертка -->
 		<div class="centr contact-container">
 			<article class="contact-block">
@@ -281,15 +287,15 @@
   <!-- Подвал -->
 	<footer class="footer centr">
 		<ul class="social reset-ul">
-			<li><a class="social-icon" href="#"><img src="img/vk-icon.png" alt=""></a></li>
-			<li><a class="social-icon" href="#"><img src="img/fb-icon.png" alt=""></a></li>
-			<li><a class="social-icon" href="#"><img src="img/insta-icon.png" alt=""></a></li>
+			<li><a class="social-icon" href="#"><img src="img/vk-icon.png" width="26" height="15" alt="Вконтакте"></a></li>
+			<li><a class="social-icon" href="#"><img src="img/fb-icon.png" width="12" height="22" alt="Фейсбук"></a></li>
+			<li><a class="social-icon" href="#"><img src="img/insta-icon.png" width="21" height="21" alt="Инстаграм"></a></li>
 		</ul>
 		<p><b>Давайте дружить, это выгодно!</b>Скидка 10% для друзей из социальных сетей.</p>
 	</footer>
   
   <!-- Скрипты -->
-	<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
+	<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU"></script>
   <script src="js/script.js"></script>
 </body>
 
