--- a/index.html
+++ b/index.html
@@ -90,21 +90,21 @@
       <ul class="services-list reset-ul">
 
         <li class="services-item">
-          <img src="img/illustration-1.jpg" alt="">
+          <img src="img/illustration-1.jpg" width="300" height="146" alt="Веб-сайты">
 				  <h3 class="reset-h">Веб-сайты</h3>
 				  <p class="reset-p">Мир никогда не будет прежним <br> после того как увидит ваш сайт!</p>
 				  <a href="#" class="btn btn-red">ЗАКАЗАТЬ</a>
         </li>
 
         <li class="services-item">
-          <img src="img/illustration-2.jpg" alt="">
+          <img src="img/illustration-2.jpg" width="300" height="146" alt="Приложения">
 				  <h3 class="reset-h">Приложения</h3>
 				  <p class="reset-p">Покорите топ-10 приложений в br AppStore и Google Play</p>
 				  <a href="#" class="btn btn-green">ЗАКАЗАТЬ</a>
         </li>
 
         <li class="services-item">
-          <img src="img/illustration-3.jpg" alt="">
+          <img src="img/illustration-3.jpg" width="300" height="146" alt="Приложения">
 				  <h3 class="reset-h">Презентации</h3>
 				  <p class="reset-p">Вы даже не подозреваете, <br>
 					насколько вы изумительны!</p>
@@ -132,7 +132,7 @@
         </ul>
       </div>
       <div class="item">
-        <img src="img/nerds-illustration.png" alt="">
+        <img src="img/nerds-illustration.png" width="360" height="208"  alt="Нердс">
         <h4 class="reset-h">с 2004 года Любим точность во всем:</h4>
         <ul class="about-stats reset-ul">
           <li>
@@ -154,15 +154,16 @@
 	  <section class="works centr">
 		  <h2 class="visually-hidden">Наши работы</h2>
 		  <ul class="works-list reset-ul">
-			  <li><a href="#"><img src="img/logo-1.png" alt=""></a></li>
-			  <li><a href="#"><img src="img/logo-2.png" alt=""></a></li>
-			  <li><a href="#"><img src="img/logo-3.png" alt=""></a></li>
-			  <li><a href="#"><img src="img/logo-4.png" alt=""></a></li>
+			  <li><a href="#"><img src="img/logo-1.png" width="199" height="68" alt="Html Academy"></a></li>
+			  <li><a href="#"><img src="img/logo-2.png" width="209" height="90" alt="Borodinski"></a></li>
+			  <li><a href="#"><img src="img/logo-3.png" width="185" height="52" alt="Pink"></a></li>
+			  <li><a href="#"><img src="img/logo-4.png" width="173" height="84" alt="Mishka"></a></li>
 		  </ul>
   </section>
   
   <!-- Контакты -->
 	<section class="contact">
+      <h2 class="visually-hidden">Контакты</h2>
 		<!-- Обертка -->
 		<div class="centr contact-container">
 			<article class="contact-block">
@@ -219,14 +220,14 @@
   <!-- Подвал -->
 	<footer class="footer centr">
 		<ul class="social reset-ul">
-			<li><a class="social-icon" href="#"><img src="img/vk-icon.png" alt=""></a></li>
-			<li><a class="social-icon" href="#"><img src="img/fb-icon.png" alt=""></a></li>
-			<li><a class="social-icon" href="#"><img src="img/insta-icon.png" alt=""></a></li>
+        <li><a class="social-icon" href="#"><img src="img/vk-icon.png" width="26" height="15" alt="Вконтакте"></a></li>
+        <li><a class="social-icon" href="#"><img src="img/fb-icon.png" width="12" height="22" alt="Фейсбук"></a></li>
+        <li><a class="social-icon" href="#"><img src="img/insta-icon.png" width="21" height="21" alt="Инстаграм"></a></li>
 		</ul>
 		<p><b>Давайте дружить, это выгодно!</b>Скидка 10% для друзей из социальных сетей.</p>
 	</footer>
   <!-- Скрипты -->
-	<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
+	<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" ></script>
   <script src="js/script.js"></script>
 </body>
 
